function: loading account and category icons when launching the application